Source/Alternet.UI.Pal/Api/TextBoxTextAttr.Api.h

ALTERNET_UI_API int TextBoxTextAttr_GetLineSpacing_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<int>([&](){
            return obj->GetLineSpacing(attr);
        });
}
ALTERNET_UI_API int TextBoxTextAttr_GetBulletStyle_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<int>([&](){
            return obj->GetBulletStyle(attr);
        });
}
ALTERNET_UI_API int TextBoxTextAttr_GetBulletNumber_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<int>([&](){
            return obj->GetBulletNumber(attr);
        });
}
ALTERNET_UI_API char16_t* TextBoxTextAttr_GetBulletText_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<char16_t*>([&](){
            return AllocPInvokeReturnString(obj->GetBulletText(attr));
        });
}
ALTERNET_UI_API char16_t* TextBoxTextAttr_GetURL_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<char16_t*>([&](){
            return AllocPInvokeReturnString(obj->GetURL(attr));
        });
}
ALTERNET_UI_API int TextBoxTextAttr_GetTextEffects_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<int>([&](){
            return obj->GetTextEffects(attr);
        });
}
ALTERNET_UI_API int TextBoxTextAttr_GetTextEffectFlags_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<int>([&](){
            return obj->GetTextEffectFlags(attr);
        });
}
ALTERNET_UI_API int TextBoxTextAttr_GetOutlineLevel_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<int>([&](){
            return obj->GetOutlineLevel(attr);
        });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_IsCharacterStyle_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<c_bool>([&](){
            return obj->IsCharacterStyle(attr);
        });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_IsParagraphStyle_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<c_bool>([&](){
            return obj->IsParagraphStyle(attr);
        });
}
ALTERNET_UI_API c_bool TextBoxTextAttr_IsDefault_(TextBoxTextAttr* obj, void* attr)
{
    return MarshalExceptions<c_bool>([&](){
            return obj->IsDefault(attr);
        });
}